Ensure middle alignment

--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,8 @@ footer p {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100%;
+  justify-content: center;
 }
 
 
